--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,29 +15,29 @@ jobs:
           ISSUE_NUMBER=$(jq -r '.issue.number' $GITHUB_EVENT_PATH)
           ISSUE_CREATOR=$(jq -r '.issue.user.login' $GITHUB_EVENT_PATH)
           
-          # Assign the issue creator as an assignee using secrets.GITHUB_TOKEN
+          # Assign the issue creator as an assignee
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token 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" \
             -d "{\"assignees\":[\"$ISSUE_CREATOR\"]}" \
             "https://api.github.com/repos/VincentNadar777/Scrapy_Project/issues/$ISSUE_NUMBER/assignees"
 
       - name: Add Issue to 'KANBAN' Project
         run: |
-          PROJECT_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/VincentNadar777/Scrapy_Project/projects" | jq '.[] | select(.name == "KANBAN").id')
+          PROJECT_ID=$(curl -s -H "Authorization: token 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" "https://api.github.com/repos/VincentNadar777/Scrapy_Project/projects" | jq '.[] | select(.name == "KANBAN").id')
           if [ -z "$PROJECT_ID" ]; then
             echo "Project 'KANBAN' not found."
             exit 1
           fi
 
           # Find the 'VINCI' board in the 'KANBAN' project (assuming 'VINCI' is the board name)
-          BOARD_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/projects/$PROJECT_ID/boards" | jq '.[] | select(.name == "VINCI").id')
+          BOARD_ID=$(curl -s -H "Authorization: token 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" "https://api.github.com/projects/$PROJECT_ID/boards" | jq '.[] | select(.name == "VINCI").id')
           if [ -z "$BOARD_ID" ]; then
             echo "Board 'VINCI' not found in 'KANBAN' project."
             exit 1
           fi
 
           # Find the 'In Progress' column in the 'VINCI' board (assuming 'In Progress' is the column name)
-          COLUMN_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/projects/boards/$BOARD_ID/columns" | jq '.[] | select(.name == "In Progress").id')
+          COLUMN_ID=$(curl -s -H "Authorization: token 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" "https://api.github.com/projects/boards/$BOARD_ID/columns" | jq '.[] | select(.name == "In Progress").id')
           if [ -z "$COLUMN_ID" ]; then
             echo "Column 'In Progress' not found in 'VINCI' board."
             exit 1
@@ -47,6 +47,6 @@ jobs:
 
           # Add the issue to the 'KANBAN' project
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token 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" \
             -d "{\"content_id\":$ISSUE_NUMBER,\"content_type\":\"Issue\"}" \
             "https://api.github.com/projects/columns/$COLUMN_ID/cards"
