--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: Self-Assign and Add Issue to Project
+name: Auto-Assign Issue to Project and Column
 
 on:
   issues:
@@ -6,14 +6,12 @@ on:
       - opened
 
 jobs:
-  self_assign_and_add_to_project:
+  auto_assign_and_add_to_project:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-        with:
-          ref: ${{ github.ref }}
 
       - name: Get issue information
         id: issue_info
@@ -26,7 +24,7 @@ jobs:
           issue_number="${{ github.event.issue.number }}"
           repository="${{ github.repository }}"
           issue_creator="${{ github.event.issue.user.login }}"
-          token="${{ secrets.GITHUB_TOKEN }}"
+          token="${{ secrets.GITHUB_PAT }}"
           
           response=$(curl -X POST -H "Authorization: token $token" -d '{"assignees":["'$issue_creator'"]}' "https://api.github.com/repos/$repository/issues/$issue_number/assignees")
           echo "Response: $response"
@@ -35,8 +33,9 @@ jobs:
         run: |
           issue_number="${{ github.event.issue.number }}"
           repository="${{ github.repository }}"
-          project_id="2"  # Replace with your project ID
-          token="${{ secrets.GITHUB_TOKEN }}"
+          project_name="KANBAN"
+          token="${{ secrets.GITHUB_PAT }}"
           
+          project_id=$(curl -H "Authorization: token $token" "https://api.github.com/repos/$repository/projects" | jq '.[] | select(.name == "'$project_name'").id')
           response=$(curl -X POST -H "Authorization: token $token" -d '{"content_id":'$issue_number', "content_type":"Issue"}' "https://api.github.com/projects/$project_id/columns")
           echo "Response: $response"
